Trying to have basic UI based on cyclone engine code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_library(SymoPhysics ${SRC} ${HDR})
 
 target_include_directories(SymoPhysics  PUBLIC "./inc")
 
+# Exacuteble sample app
+add_subdirectory(app)
+
 # Set gtest
 include(FetchContent)
 FetchContent_Declare(
